[package]
name = "maf2bed"
version = "0.2.0"
edition = "2021"
description = "Converts multiple alignment format (MAF) files to a BED format for tabixing. Used with jbrowse-plugin-mafviewer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
